--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ requires-python = ">=3.10"
 dynamic = ["dependencies", "optional-dependencies"]
 
 [tool.setuptools]
-packages = ["mnist-signlanguage"]
+packages = ["mnist_signlanguage"]
 
 [tool.setuptools.dynamic]
 dependencies = {file = ["requirements.txt"]}
