--- a/mnist_signlanguage/config/train_model.yaml
+++ b/mnist_signlanguage/config/train_model.yaml
@@ -5,6 +5,10 @@ base:
 
 data_fetch:
     dir: "data/processed"
+    train_data_path: "data/processed/train/train_images.pt"
+    train_labels_path: "data/processed/train/train_labels.txt"
+    test_data_path: "data/processed/test/test_images.pt"
+    test_labels_path: "data/processed/test/test_labels.txt"
     batch_size: 64
 
 model_params:
