--- a/.dvc/config
+++ b/.dvc/config
@@ -1,4 +1,7 @@
 [core]
-    remote = storage
+    remote = remote_storage
 ['remote "storage"']
     url = gdrive://1o-ADWwpwm666OiubRUARpkPDiH7Jp_Ff
+['remote "remote_storage"']
+    url = gs://my-bucket-sbb/
+    version_aware = true
