--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -47,6 +47,12 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements_dev.txt
         pip install -r requirements_test.txt
+
+    - name: Setup DVC
+      run: | 
+        dvc init --no-scm
+        dvc remote add -d remote_storage gs://my-bucket-sbb/
+        dvc remote modify remote_storage version_aware true
    
     - name: Download data
       run: make data
