--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -17,3 +17,8 @@ mkdocs <= 1.5.3
 mkdocs-material <= 9.4.6
 mkdocstrings <= 0.23.0
 mkdocstrings[python]>=0.18
+
+dvc
+dvc_gs
+dvc_gdrive
+hydra-core
