--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -49,11 +49,7 @@ jobs:
         pip install -r requirements_test.txt
    
     - name: Download data
-      run: |
-        dvc pull --force
-        echo {{ls}}
-        make data
-      # run: make data
+      run: make data
       env:
         GDRIVE_CREDENTIALS_DATA: ${{ secrets.GDRIVE_CREDENTIALS_DATA }}
   
