--- a/mnist_signlanguage/config/train_model.yaml
+++ b/mnist_signlanguage/config/train_model.yaml
@@ -1,19 +1,21 @@
 base:
-   seed: 42
-   device: "cuda"
-   log_interval: 50
+  experiment_name: default-model
+  seed: 42
+  device: "cuda"
+  log_interval: 50
 
 data_fetch:
-    dir: "data/processed"
-    train_data_path: "data/processed/train/train_images.pt"
-    train_labels_path: "data/processed/train/train_labels.txt"
-    test_data_path: "data/processed/test/test_images.pt"
-    test_labels_path: "data/processed/test/test_labels.txt"
-    batch_size: 64
+  gcp_bucket_name: gs://my-bucket-sbb/
+  dir: "data/processed"
+  train_data_path: "data/processed/train/train_images.pt"
+  train_labels_path: "data/processed/train/train_labels.txt"
+  test_data_path: "data/processed/test/test_images.pt"
+  test_labels_path: "data/processed/test/test_labels.txt"
+  batch_size: 64
 
 model_params:
-    dir: "models/"
+  dir: "models/"
 
 hyperparams:
-    lr: 0.001
-    epochs: 40
+  lr: 0.001
+  epochs: 40
