--- a/.github/workflows/dockers.yml
+++ b/.github/workflows/dockers.yml
@@ -1,3 +1,6 @@
+# Automatic building and push to Docker github repository. And testing if it works
+# It is only testing on linux and python 3.10
+
 name: "Docker Image CI"
 
 on:
