--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,3 +1,6 @@
+# Automatically run all pytest tests on push or pull request
+# Works on Linux, macOS, and Windows. With python  version 3.10
+
 name: "Run tests"
 
 on:
