--- a/mnist_signlanguage/config/train_model.yaml
+++ b/mnist_signlanguage/config/train_model.yaml
@@ -7,15 +7,19 @@ base:
 data_fetch:
   gcp_bucket_name: gs://my-bucket-sbb/
   dir: "data/processed"
+  # the data paths
   train_data_path: "data/processed/train/train_images.pt"
   train_labels_path: "data/processed/train/train_labels.txt"
   test_data_path: "data/processed/test/test_images.pt"
   test_labels_path: "data/processed/test/test_labels.txt"
+  # the hyperparameter for the data loader
   batch_size: 64
 
+# the model path
 model_params:
   dir: "models/"
 
+# the hyperparameters for the model
 hyperparams:
   lr: 0.001
   epochs: 40
