--- a/mnist_signlanguage/config/train_model.yaml
+++ b/mnist_signlanguage/config/train_model.yaml
@@ -5,7 +5,7 @@ base:
   log_interval: 50
 
 data_fetch:
-  gcp_bucket_name: gs://my-bucket-sbb/
+  gcp_bucket_name: gs://my-bucket-sbb
   dir: "data/processed"
   train_data_path: "data/processed/train/train_images.pt"
   train_labels_path: "data/processed/train/train_labels.txt"
