--- a/.github/workflows/docker_build_fastapi.yml
+++ b/.github/workflows/docker_build_fastapi.yml
@@ -1,7 +1,7 @@
 # Automatic building and push to Docker github repository. And testing if it works
 # It is only testing on linux and python 3.10
 
-name: "Docker Image CI"
+name: "Fastapi Docker Image CI"
 
 on:
   push:
@@ -23,7 +23,7 @@ jobs:
         run: |
           echo "${{ secrets.DOCKER_HUB_TOKEN }}" | docker login \
             -u "${{ secrets.DOCKER_HUB_USERNAME }}" --password-stdin docker.io
-          docker build . --file dockerfiles/train_model.dockerfile \
+          docker build . --file dockerfiles/fastapi.dockerfile \
             --build-arg WANDB_API_KEY=${{ secrets.WANDB_API_KEY }} \
             --tag docker.io/${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.DOCKER_HUB_REPOSITORY }}:$GITHUB_SHA
           docker push docker.io/${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.DOCKER_HUB_REPOSITORY }}:$GITHUB_SHA
