--- a/.github/workflows/docker_build_fastapi.yml
+++ b/.github/workflows/docker_build_fastapi.yml
@@ -23,7 +23,7 @@ jobs:
         run: |
           echo "${{ secrets.DOCKER_HUB_TOKEN }}" | docker login \
             -u "${{ secrets.DOCKER_HUB_USERNAME }}" --password-stdin docker.io
-          docker build . --file dockerfiles/fastapi.dockerfile \
+          docker build . --file dockerfiles/predict_model.dockerfile \
             --build-arg WANDB_API_KEY=${{ secrets.WANDB_API_KEY }} \
             --tag docker.io/${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.DOCKER_HUB_REPOSITORY }}:$GITHUB_SHA
           docker push docker.io/${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.DOCKER_HUB_REPOSITORY }}:$GITHUB_SHA
