--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,3 +25,8 @@ dev = {file = ['requirements_dev.txt']}
 
 [tool.ruff]
 line-length = 120
+
+[tool.pytest.ini_options]
+pythonpath = [
+  ".", "mnist_signlanguage", "tests"
+]
