--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,39 +1,77 @@
-
-name: "Deploy Container"
+name: Continuous Deployment
 
 on:
   push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+    branches:
+      - main
 
 jobs:
-  clouddeploy:
+  deploy:
     runs-on: ubuntu-latest
+
     steps:
-      # Build the container image
-      - name: 'gcr.io/cloud-builders/docker'
-        args: ['build', '-t', 'gcr.io/${{ secrets.GCP_PROJECT_NAME }}/gcppredictapp:latest', '.'] 
-      # Push the container image to Container Registry
-      - name: 'gcr.io/cloud-builders/docker'
-        args: ['push', 'gcr.io/${{ secrets.GCP_PROJECT_NAME }}/gcppredictapp:latest']
-      # Deploy container image to Cloud Run
-      - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
-        entrypoint: gcloud
-        args:
-        - 'run'
-        - 'deploy'
-        - 'run'
-        - '--image'
-        - 'gcr.io/${{ secrets.GCP_PROJECT_NAME }}/gcppredictapp:latest'
-        - '--region'
-        - 'europe-north1'
-        - '--platform'
-        - 'managed'
-        - '--port'
-        - '80'
-        - '--cpu'
-        - '2'
-        - '--memory'
-        - '8Gi'
-        - '--allow-unauthenticated'
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+
+      - name: Set up Google Cloud SDK
+        uses: google-github-actions/setup-gcloud@master
+        with:
+          project_id: ${{ secrets.GCP_PROJECT_NAME }}
+          service_account_key: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
+          export_default_credentials: true
+
+      - name: Build and Push to Container Registry
+        run: |
+          gcloud builds submit --tag gcr.io/${{ secrets.GCP_PROJECT_NAME }}/gcppredictapp:latest
+          gcloud auth configure-docker
+          docker push gcr.io/${{ secrets.GCP_PROJECT_NAME }}/gcppredictapp:latest
+
+      - name: Deploy to Cloud Run
+        run: |
+          gcloud run deploy run \
+            --image gcr.io/${{ secrets.GCP_PROJECT_NAME }}/gcppredictapp:latest \
+            --region europe-north1 \
+            --platform managed \
+            --port 80 \
+            --cpu 2 \
+            --memory 8Gi \
+            --allow-unauthenticated
+            
+# name: "Deploy Container"
+
+# on:
+#   push:
+#     branches: [ master ]
+#   pull_request:
+#     branches: [ master ]
+
+# jobs:
+#   clouddeploy:
+#     runs-on: ubuntu-latest
+#     steps:
+#       # Build the container image
+#       - name: 'gcr.io/cloud-builders/docker'
+#         args: ['build', '-t', 'gcr.io/${{ secrets.GCP_PROJECT_NAME }}/gcppredictapp:latest', '.'] 
+#       # Push the container image to Container Registry
+#       - name: 'gcr.io/cloud-builders/docker'
+#         args: ['push', 'gcr.io/${{ secrets.GCP_PROJECT_NAME }}/gcppredictapp:latest']
+#       # Deploy container image to Cloud Run
+#       - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+#         entrypoint: gcloud
+#         args:
+#         - 'run'
+#         - 'deploy'
+#         - 'run'
+#         - '--image'
+#         - 'gcr.io/${{ secrets.GCP_PROJECT_NAME }}/gcppredictapp:latest'
+#         - '--region'
+#         - 'europe-north1'
+#         - '--platform'
+#         - 'managed'
+#         - '--port'
+#         - '80'
+#         - '--cpu'
+#         - '2'
+#         - '--memory'
+#         - '8Gi'
+#         - '--allow-unauthenticated'
